backendworker/kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nhsonline-backendworker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nhsonline-backendworker
    spec:
      containers:
      - name: nhsonline-backendworker
        image: nhsapp.azurecr.io/nhsonline-backendworker:latest
        ports:
        - containerPort: 8082
      imagePullSecrets:
       - name: azure-registry
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nhsonline-wiremock
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nhsonline-wiremock
    spec:
      containers:
      - name: nhsonline-wiremock
        image: nhsapp.azurecr.io/wiremock:2.17.0-alpine
        ports:
        - containerPort: 8080
      imagePullSecrets:
       - name: azure-registry
