backendworker/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
  name: nhsonline-backendworker
spec:
  rules:
    - host: api-preview.devuks1.bitraft.io
      http:
        paths:
          - backend:
              serviceName: nhsonline-backendworker
              servicePort: 80
            path: /
  tls:
    - hosts:
      - "api-preview.devuks1.bitraft.io"
      secretName: api-preview-devuks1-bitraft-io
